<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  	<modelVersion>4.0.0</modelVersion>
  	<groupId>com.ruyuan</groupId>
  	<artifactId>netty-gateway-test-mvc</artifactId>
 	<version>1.0.0</version>
 	
 	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.7.RELEASE</version>
		<relativePath/>
	</parent>
 	
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lombok.version>1.18.0</lombok.version>
        <mapstruct.version>1.2.0.Final</mapstruct.version>
        <zookeeper.version>3.4.11</zookeeper.version>	
        <dubbo.version>2.7.4.1</dubbo.version>
    </properties>
    
    <dependencies>
		<dependency>
			<groupId>com.baker</groupId>
			<artifactId>netty-gateway-client</artifactId>
			<version>1.0.0</version>
		</dependency>    
    
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>  
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-jdk8</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
            <version>${mapstruct.version}</version>
            <scope>provided</scope>
        </dependency>

		<!---->
        <dependency>
            <groupId>org.apache.dubbo</groupId>
            <artifactId>dubbo</artifactId>
            <version>${dubbo.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-context</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.dubbo</groupId>
            <artifactId>dubbo-spring-boot-starter</artifactId>
            <version>${dubbo.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.zookeeper</groupId>
            <artifactId>zookeeper</artifactId>
            <version>${zookeeper.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>log4j</artifactId>
                    <groupId>log4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>slf4j-log4j12</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>		
		<dependency>
			<groupId>org.apache.dubbo</groupId>
			<artifactId>dubbo-dependencies-zookeeper</artifactId>
			<version>${dubbo.version}</version>
			<type>pom</type>
			<exclusions>
				<exclusion>
            		<groupId>org.apache.zookeeper</groupId>
            		<artifactId>zookeeper</artifactId>
				</exclusion>			
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
				</exclusion>
				<exclusion>
					<artifactId>log4j</artifactId>
					<groupId>log4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>  
        <dependency>
            <groupId>org.apache.dubbo</groupId>
            <artifactId>dubbo-spring-boot-autoconfigure-compatible</artifactId>
            <version>${dubbo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.101tec</groupId>
            <artifactId>zkclient</artifactId>
            <version>0.10</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>



    </dependencies>

    <build>
        <finalName>${project.name}</finalName>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.xml</include>
                </includes>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**</include>
                </includes>
                <filtering>true</filtering>
            </resource>
        </resources>
        
        <pluginManagement>
	        <plugins>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-compiler-plugin</artifactId>
	                <version>3.7.0</version>
	                <configuration>
	                    <source>1.8</source>
	                    <target>1.8</target>
	                    <encoding>UTF-8</encoding>
	                    <testIncludes>
	                        <testInclude>none</testInclude>
	                    </testIncludes>
	                    <annotationProcessorPaths>
	                        <path>
	                            <groupId>org.mapstruct</groupId>
	                            <artifactId>mapstruct-processor</artifactId>
	                            <version>${mapstruct.version}</version>
	                        </path>
	                        <path>
	                            <groupId>org.projectlombok</groupId>
	                            <artifactId>lombok</artifactId>
	                            <version>${lombok.version}</version>
	                        </path>
	                    </annotationProcessorPaths>
	                </configuration>
	            </plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-jar-plugin</artifactId>
	                <version>3.1.0</version>
	                <configuration>
	                    <archive>
	                        <manifest>
	                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
	                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
	                        </manifest>
	                    </archive>
	                </configuration>
	            </plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-jdeps-plugin</artifactId>
	                <version>3.0.0</version>
	                <executions>
	                    <execution>
	                        <goals>
	                            <goal>jdkinternals</goal>
	                            <goal>test-jdkinternals</goal>
	                        </goals>
	                    </execution>
	                </executions>
	            </plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-source-plugin</artifactId>
	                <version>3.0.1</version>
	                <configuration>
	                    <attach>true</attach>
	                </configuration>
	                <executions>
	                    <execution>
	                        <id>attach-sources</id>
	                        <goals>
	                            <goal>jar-no-fork</goal>
	                        </goals>
	                    </execution>
	                </executions>
	            </plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-surefire-plugin</artifactId>
	                <version>2.21.0</version>
	                <configuration>
	                    <argLine>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
	                    <testFailureIgnore>true</testFailureIgnore>
	                    <includes>
	                        <include>**/*Test*.java</include>
	                    </includes>
	                    <excludes/>
	                </configuration>
	            </plugin>	            
	      </plugins>
        </pluginManagement>
        <plugins>
             <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>com.ruyuan.test.mvc.Application</mainClass>
                    <addResources>true</addResources>
                </configuration>
            </plugin>       
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-source-plugin</artifactId>
	            <configuration>
	                <attach>true</attach>
	            </configuration>
	            <executions>
	                <execution>
	                    <id>attach-sources</id>
	                    <goals>
	                        <goal>jar-no-fork</goal>
	                    </goals>
	                </execution>
	            </executions>
	        </plugin>  
        </plugins>      
    </build>
</project>